--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,7 +30,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 sha-1 = "0.9"
 thiserror = "1.0.11"
-tokio = { version = "0.2.8", features = ["time", "rt-core", "macros"] }
+tokio = { version = "0.3.6", features = ["time", "rt", "rt-multi-thread", "macros"] }
 url = "2.1.1"
 
 [features]
