--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,8 +17,8 @@ chrono = { version = "0.4", features = ["serde"] }
 futures = "0.3"
 derive_more = "0.99"
 hmac = "0.8"
-hyper = "0.13"
-hyper-rustls = { version = "0.20", optional = true, default-features = false }
+hyper = { version = "0.14", features = ["client", "http2", "http1", "stream"] }
+hyper-rustls = { version = "0.22", optional = true, default-features = false }
 hyper-tls = { version = "0.4", optional = true }
 lazy_static = "1.4"
 native-tls = { version = "0.2", optional = true }
@@ -30,11 +30,11 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 sha-1 = "0.9"
 thiserror = "1.0.11"
-tokio = { version = "0.3.6", features = ["time", "rt", "rt-multi-thread", "macros"] }
+tokio = { version = "1.0.1", features = ["time", "rt", "rt-multi-thread", "macros"] }
 url = "2.1.1"
 
 [features]
-default = ["native_tls"]
+default = ["rustls_webpki"]
 native_tls = ["native-tls", "hyper-tls"]
 rustls = ["hyper-rustls", "hyper-rustls/native-tokio"]
 rustls_webpki = ["hyper-rustls", "hyper-rustls/webpki-tokio"]
