--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,7 @@ serde_json = "1.0"
 sha-1 = "0.9"
 thiserror = "1.0.11"
 tokio = { version = "0.3.6", features = ["time", "rt", "rt-multi-thread", "macros"] }
+tokio-compat-02 = "0.1.1"
 url = "2.1.1"
 
 [features]
